Fix or remove broken links in objectMonitor.cpp comments

XMLWordPrintable

    • b83

        The comments in objectMonitor.cpp include two broken Oracle-internal URLs:

        // See http://j2se.east/~dice/PERSIST/040825-LockFreeQueues.html

        // See http://j2se.east/~dice/PERSIST/040824-AdaptiveSpinning.html

        These should be fixed (ideally to reference something publicly-accessible) or removed.

              Assignee:
              David Buck
              Reporter:
              David Buck
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: