8135002: Fix or remove broken links in objectMonitor.cpp comments

Updated comments to refer to relevant patents.

Reviewed-by: dcubed